--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -1,19 +1,23 @@
-<md-content>
-	
-	<md-fab-speed-dial md-open="fabOpen" class="md-fab-top-right md-scale">
-		<md-fab-trigger>
-			<md-button class="md-fab md-accent">
-				<md-icon>edit</md-icon>
-			</md-button>
-		</md-fab-trigger>
-		<md-fab-actions>
-			<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
-				<md-tooltip md-direction="left">사용자 등록</md-tooltip>
-				<md-icon>person</md-icon>
-			</md-button>
-		</md-fab-actions>
-	</md-fab-speed-dial>
-	
+<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale">
+	<md-fab-trigger>
+		<md-button class="md-fab md-accent">
+			<md-icon>add</md-icon>
+		</md-button>
+	</md-fab-trigger>
+	<md-fab-actions>
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
+			<md-tooltip md-direction="left">기본정보 수정</md-tooltip>
+			<md-icon>edit</md-icon>
+		</md-button>
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
+			<md-tooltip md-direction="left">사용자 등록</md-tooltip>
+			<md-icon>person</md-icon>
+		</md-button>
+	</md-fab-actions>
+</md-fab-speed-dial>
+
+<md-content class="content-container content">
+	<h3 layout-padding="" class="md-headline">사용자 모임</h3>
 	
 	<md-card>
 		<md-card-header>
