--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -11,21 +11,40 @@
 <md-content class="content-container content">
 	<h3 layout-padding="" class="md-headline">사용자 모임</h3>
 	
-	<cm-search-list
-		resource-url="'/rest/configuration/userGroups'"
-		domains="domains">
-		
-		<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)">
+	<md-card md-whiteframe="3">
+		<cm-search-list
+			resource-url="'/rest/configuration/userGroups'"
+			domains="domains">
 			
-			<div flex="5">
-				<md-icon>group</md-icon>
-			</div>
-			<b flex="30">{{domain.name}}</b>
-			<span flex="30" class="text-muted">{{domain.authority.name}}</span>
-			<span class="text-muted">{{domain.createdAt}}</span>
-			
-			<md-divider ng-if="!$last"></md-divider>
-		</md-list-item>
-	</cm-search-list>
+			<cm-search-list-filters>
+				<md-card-content class="content" layout="column">
+					<md-input-container layout-fill="">
+						<label>이름</label>
+						<input />
+					</md-input-container>
+					<md-input-container layout-fill="">
+						<label>userId</label>
+						<input />
+					</md-input-container>
+					<md-input-container layout-fill="">
+						<label>이메일</label>
+						<input />
+					</md-input-container>
+				</md-card-content>
+			</cm-search-list-filters>
+			<cm-search-list-items>
+				<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)">
+					
+					<div flex="5">
+						<md-icon>group</md-icon>
+					</div>
+					<b flex="50">{{domain.name}}</b>
+					<span flex="45" class="text-muted">{{domain.authority.name}}</span>
+					
+					<md-divider ng-if="!$last"></md-divider>
+				</md-list-item>
+			</cm-search-list-items>
+		</cm-search-list>
+	</md-card>
 	
 </md-content>
