사용자 등록 기능 개발 개인 설정 화면 생성

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -1,6 +1,6 @@
 <md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed">
 	<md-fab-trigger>
-		<md-button class="md-fab md-accent" ui-sref="create">
+		<md-button class="md-fab" ui-sref="create">
 			<md-tooltip md-direction="left">사용자 생성</md-tooltip>
 			<md-icon>person_add</md-icon>
 		</md-button>
