--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
@@ -1,41 +1,55 @@
 <md-content class="content-container content">
 	<h3 layout-padding="" class="md-headline">사용자</h3>
 	
-	<md-card>
-		
-		<form name="form" ng-submit="create(form, $event)" novalidate="novalidate">
+	<form name="form" ng-submit="create(form, $event)" novalidate="novalidate">
+		<md-card>
 			
 			<md-card-content>
 				<md-input-container class="md-block">
 					<label>userId</label>
-					<input name="userId" ng-model="domain.userId" required="required" md-maxlength="20" maxlength="20" minlength="6" />
-					<div ng-messages="firstUserform.userId.$submitted">
-						<div ng-message="required" ng-show="form.userId.$error.required">필수 입력 항목입니다.</div>
-						<div ng-message="required" ng-show="form.userId.$error.minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
+					<input name="userId" ng-model="domain.userId" required="required" md-maxlength="20" maxlength="20" ng-minlength="6" />
+					<div ng-messages="form.userId.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+						<div ng-message="minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
 					</div>
 				</md-input-container>
-				<md-input-container layout-fill="">
+				<md-input-container class="md-block">
 					<label>이름</label>
-					<input ng-model="domain.name" />
+					<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
+					<div ng-messages="form.name.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+					</div>
 				</md-input-container>
-				<md-input-container layout-fill="">
+				<md-input-container class="md-block">
 					<label>이메일</label>
-					<input ng-model="domain.email" />
+					<input type="email" name="email" ng-model="domain.email" required="required" md-maxlength="200" maxlength="200" />
+					<div ng-messages="form.email.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+						<div ng-message="email">이메일 형식을 입력하시기 바랍니다.</div>
+					</div>
 				</md-input-container>
-				<md-input-container layout-fill="">
+				<md-input-container class="md-block">
 					<label>비밀번호</label>
-					<input ng-model="domain.password" />
+					<input type="password" name="password" ng-model="domain.password" required="required" md-maxlength="30" maxlength="30" ng-minlength="6" />
+					<div ng-messages="form.password.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+						<div ng-message="minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
+					</div>
 				</md-input-container>
-				<md-input-container layout-fill="">
+				<md-input-container class="md-block">
 					<label>비밀번호 확인</label>
-					<input ng-model="domain.password2" />
+					<input type="password" name="password2" ng-model="domain.password2"  required="required" md-maxlength="30" maxlength="30" />
+					<div ng-messages="form.password2.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+						<div ng-show="domain.password != domain.password2">비밀번호가 일치하지 않습니다.</div>
+					</div>
 				</md-input-container>
 			</md-card-content>
-		</form>
-		<md-card-actions>
-			<md-button >취소</md-button>
-			<md-button class="md-raised md-primary" type="sumbit">생성</md-button>
-		</md-card-actions>
+			<md-card-actions layout="row" layout-align="end center">
+				<md-button ui-sref="list">취소</md-button>
+				<md-button class="md-raised md-primary" type="sumbit">생성</md-button>
+			</md-card-actions>
 			
-	</md-card>
+		</md-card>
+	</form>
 </md-content>
