크롬외의 브라우저에서 화면 깨지는 문제 해결중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -8,7 +8,7 @@
 </md-fab-speed-dial>
 
 
-<md-content class="content-container content">
+<div class="content-container content">
 	<h3 layout-padding="" class="md-headline">사용자</h3>
 	
 	<md-card md-whiteframe="4">
@@ -89,4 +89,4 @@
 		</md-list>
 	</md-card>
 	
-</md-content>
+</div>
