--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
@@ -45,6 +45,6 @@ angular.module('cinnamon')
 </head>
 
 <body layout:fragment="content">
-	<ui-view layout-fill="" ng-style="sidenavStyle" />
+	<div ui-view="" layout-fill=""></div>
 </body>
 </html>
