--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -14,8 +14,7 @@
 
 
 </head>
-<body layout:fragment="body" class="content">
-<div ng-controller="layoutController" layout="column">
+<body layout:fragment="body" class="content" layout="column" ng-controller="layoutController">
 	<md-toolbar md-whiteframe="5">
 		<div class="md-toolbar-tools" layout-fill="">
 			<md-button class="md-icon-button" ng-click="toggleSidenav()">
@@ -57,7 +56,7 @@
 		</div>
 		
 	</md-toolbar>
-	<div flex="" layout="row" class="content">
+	<md-content flex="" layout="row" class="content">
 	<!-- style="background: transparent" -->
 	<!-- md-is-locked-open="$mdMedia('gt-lg')" -->
 		<md-sidenav md-component-id="leftSidenav" md-is-locked-open="$mdMedia('gt-sm')" style="width: 230px" ng-style="sidenavStyle">
@@ -84,7 +83,6 @@
 		</md-sidenav>
 		<div layout:fragment="content">
 		</div>
-	</div>
-</div>
+	</md-content>
 </body>
 </html>
