--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/groups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/groups.html
@@ -1,15 +1,41 @@
+<!DOCTYPE html>
+
+<html
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="configuration/layout/default">
+
+<head>
+<title>코드</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<script type="text/javascript">
+/*<![CDATA[*/
+angular.module('cinnamon')
+.config(function($stateProvider, $urlRouterProvider) {
+
+});
+/*]]>*/
+</script>
+
+<base href="/" />
+</head>
+
+<body layout:fragment="content">
+	
+	
 <md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed">
 	<md-fab-trigger>
 		<md-button class="md-fab" ui-sref="create">
 			<md-tooltip md-direction="left">사용자 생성</md-tooltip>
-			<md-icon>person_add</md-icon>
+			<md-icon>add</md-icon>
 		</md-button>
 	</md-fab-trigger>
 </md-fab-speed-dial>
 
 
-<div class="content-container">
-	<h3 layout-padding="" class="md-headline">사용자</h3>
+<md-content class="content-container content">
+	<h3 layout-padding="" class="md-headline">코드</h3>
 	
 	<md-card md-whiteframe="4">
 		<md-card-header layout="row" layout-align="center center">
@@ -17,10 +43,10 @@
 			<md-input-container md-no-float="true" flex="" layout-fill="">
 				<input ng-model="searchInfo.keyword" flex="" placeholder="검색어를 입력하세요" ng-keypress="onSearch($event)" />
 			</md-input-container>
-				<md-button class="md-icon-button" ng-click="showDetailSearch = !showDetailSearch">
-					<md-tooltip md-direction="top">상세 검색</md-tooltip>
-					<md-icon>expand_more</md-icon>
-				</md-button>
+			<md-button class="md-icon-button" ng-click="showDetailSearch = !showDetailSearch">
+				<md-tooltip md-direction="top">상세 검색</md-tooltip>
+				<md-icon>expand_more</md-icon>
+			</md-button>
 			<md-menu>
 				<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
 					<md-tooltip md-direction="top">정렬</md-tooltip>
@@ -77,6 +103,29 @@
 		
 		<md-list layout-fill="">
 			<md-divider></md-divider>
+			
+			<md-list-item ng-click="goView(domain)" layout="row">
+				<div flex="5">
+					<md-icon>face</md-icon>
+				</div>
+				<b flex="30">{{domain.name}}</b>
+				<span flex="30" class="text-muted">{{domain.email}}</span>
+				<span class="text-muted">{{domain.tel}}</span>
+				<md-divider ng-if="!$last"></md-divider>
+			</md-list-item>
+			<md-list-item ng-click="goView(domain)" layout="row">
+				<div flex="5">
+					<md-icon>face</md-icon>
+				</div>
+				<b flex="30">{{domain.name}}</b>
+				<span flex="30" class="text-muted">{{domain.email}}</span>
+				<span class="text-muted">{{domain.tel}}</span>
+				<md-divider ng-if="!$last"></md-divider>
+			</md-list-item>
+			
+			
+			
+			
 			<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)" layout="row">
 				<div flex="5">
 					<md-icon>face</md-icon>
@@ -89,4 +138,19 @@
 		</md-list>
 	</md-card>
 	
-</div>
+</md-content>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+</body>
+</html>
