--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -8,7 +8,7 @@
 </md-fab-speed-dial>
 
 
-<md-content class="content-container content">
+<div class="content-container content">
 	<h3 layout-padding="" class="md-headline">사용자 모임</h3>
 	
 	<md-card md-whiteframe="3">
@@ -47,4 +47,4 @@
 		</cm-search-list>
 	</md-card>
 	
-</md-content>
+</div>
