--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -1,4 +1,18 @@
-<md-content class="content-container content">
+<div class="content-container">
+	<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale" style="position: fixed">
+		<md-fab-trigger>
+			<md-button class="md-fab md-accent">
+				<md-icon>edit</md-icon>
+			</md-button>
+		</md-fab-trigger>
+		<md-fab-actions>
+			<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
+				<md-tooltip md-direction="left">사용자 모임에 등록</md-tooltip>
+				<md-icon>group</md-icon>
+			</md-button>
+		</md-fab-actions>
+	</md-fab-speed-dial>
+
 	<md-card>
 		<!-- <md-card-header>
 			<span flex=""></span>
@@ -61,21 +75,6 @@
 	</md-card>
 	
 	
-	<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale" style="position: fixed">
-		<md-fab-trigger>
-			<md-button class="md-fab md-accent">
-				<md-icon>edit</md-icon>
-			</md-button>
-		</md-fab-trigger>
-		<md-fab-actions>
-			<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
-				<md-tooltip md-direction="left">사용자 모임에 등록</md-tooltip>
-				<md-icon>group</md-icon>
-			</md-button>
-		</md-fab-actions>
-	</md-fab-speed-dial>
-	
-	
 	<h3 layout-padding="" class="md-subhead">모임</h3>
 	<md-card>
 		<cm-search-list
@@ -113,13 +112,6 @@
 			</cm-search-list-items>
 		</cm-search-list>
 	</md-card>
+
 	
-	<!-- <md-card>
-		<md-card-header>
-			<md-card-header-text>
-				<span class="md-title">모임</span>
-			</md-card-header-text>
-		</md-card-header>
-	</md-card> -->
-	
-</md-content>
+</div>
