--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -75,7 +75,7 @@
 			ng-change="onPageChange()" />
 		
 		
-		<md-list layout-fill="">
+		<md-list>
 			<md-divider></md-divider>
 			<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)" layout="row">
 				<div flex="5">
