--- a/cinnamon-core-web-material/src/main/resources/static/css/cinnamon.css
+++ b/cinnamon-core-web-material/src/main/resources/static/css/cinnamon.css
@@ -17,7 +17,7 @@
 		margin-left: auto;
 	}
 }
-@media (min-width : 600px) {
+/* @media (min-width : 600px) {
 	.content-container {
 		max-width: 590px;
 	}
@@ -36,7 +36,30 @@
 	.content-container {
 		max-width: 1910px;
 	}
+} */
+@media (min-width : 600px) {
+	.content-container {
+		max-width: 100%;
+	}
 }
+@media (min-width : 960px) {
+	.content-container {
+		max-width: 950px;
+	}
+}
+@media (min-width : 1280px) {
+	.content-container {
+		max-width: 950px;
+	}
+}
+@media (min-width : 1920px) {
+	.content-container {
+		max-width: 1270px;
+	}
+}
+
+
+
 
 
 .cm-pagination > .cm-page {
