--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
@@ -2,6 +2,10 @@
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<h2 class="md-title">사용자 모임 선택</h2>
+			<span flex=""></span>
+			<md-button class="md-icon-button" ng-click="close()">
+				<md-icon>close</md-icon>
+			</md-button>
 		</div>
 	</md-toolbar>
 	
@@ -41,6 +45,6 @@
 	</cm-search-list>
 	
 	<md-dialog-actions>
-		<md-button ng-click="close()">닫기</md-button>
+		<md-button class="md-primary md-ink-ripple" ng-click="close()">닫기</md-button>
 	</md-dialog-actions>
 </md-dialog>
