브라우저에서 뒤로가기가 정상동작 하지 않는 문제를 해결 사용자 정보 수정 페이지 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -48,6 +48,7 @@
 </div>
 
 <uib-pagination
+	layout-margin=""
 	template-url="/configuration/partials/directive/pagination"
 	total-items="domains.totalElements"
 	items-per-page="domains.size"
