--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -20,7 +20,7 @@
 			<md-button class="md-icon-button" ng-click="toggleSidenav()" ng-show="showMenuButton()">
 				<md-icon>menu</md-icon>
 			</md-button>
-			<h2>Web console</h2>
+			<h2>Cinnamon</h2>
 			<span flex=""></span>
 			
 			<md-button class="md-icon-button">
@@ -39,7 +39,7 @@
 						<md-button ng-href="/configuration/settings" target="_self">개인 설정</md-button>
 					</md-menu-item>
 					<md-menu-item>
-						<md-button>로그아웃</md-button>
+						<md-button ng-href="/logout" target="_self">로그아웃</md-button>
 					</md-menu-item>
 				</md-menu-content>
 			</md-menu>
