--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
@@ -39,7 +39,7 @@
 				<b flex="50">{{domain.name}}</b>
 				<span flex="45" class="text-muted">{{domain.authority.name}}</span>
 				
-				<md-divider ng-if="!$last"></md-divider>
+				<md-divider></md-divider>
 			</md-list-item>
 		</cm-search-list-items>
 	</cm-search-list>
