--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/settings/profile.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/settings/profile.html
@@ -1,10 +1,21 @@
 <md-content class="content-container content">
-	<h3 layout-padding="" class="md-headline">기본 정보</h3>
+	<h3 layout-padding="" class="md-headline">
+		개인설정
+		<span class="md-subhead text-muted">프로필</span>
+	</h3>
 	
-	<form name="form" novalidate="novalidate">
+	<form name="form" ng-submit="create(form, $event)" novalidate="novalidate">
 		<md-card>
 			
 			<md-card-content>
+				<!-- <md-input-container class="md-block">
+					<label>userId</label>
+					<input name="userId" ng-model="domain.userId" required="required" md-maxlength="20" maxlength="20" ng-minlength="6" />
+					<div ng-messages="form.userId.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+						<div ng-message="minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
+					</div>
+				</md-input-container> -->
 				<md-input-container class="md-block">
 					<label>이름</label>
 					<input name="name" ng-model="domain.name" required="required" md-maxlength="50" maxlength="50" />
@@ -12,12 +23,43 @@
 						<div ng-message="required">필수 입력 항목입니다.</div>
 					</div>
 				</md-input-container>
+				<md-input-container class="md-block">
+					<label>이메일</label>
+					<input type="email" name="email" ng-model="domain.email" required="required" md-maxlength="200" maxlength="200" />
+					<div ng-messages="form.email.$error">
+						<div ng-message="required">필수 입력 항목입니다.</div>
+						<div ng-message="email">이메일 형식을 입력하시기 바랍니다.</div>
+					</div>
+				</md-input-container>
+				<md-input-container class="md-block">
+					<label>거주지</label>
+					<input name="location" ng-model="domain.location" md-maxlength="200" maxlength="200" />
+				</md-input-container>
+				<md-input-container class="md-block">
+					<label>직업</label>
+					<input name="job" ng-model="domain.job" md-maxlength="200" maxlength="200" />
+				</md-input-container>
+				<md-input-container class="md-block">
+					<label>전화</label>
+					<input name="tel" ng-model="domain.tel" md-maxlength="20" maxlength="20" />
+				</md-input-container>
+				<md-input-container class="md-block">
+					<label>핸드폰</label>
+					<input name="phone" ng-model="domain.phone" md-maxlength="20" maxlength="20" />
+				</md-input-container>
+				<md-input-container class="md-block">
+					<label>국가</label>
+					<md-select ng-model="domain.nation">
+						<md-option ng-value=""></md-option>
+						<md-option ng-value="nation.groupId" ng-repeat="nation in nations">{{nation.name}}</md-option>
+					</md-select>
+				</md-input-container>
 			</md-card-content>
-			<md-card-actions>
-				<md-button class="md-raised md-primary" ng-click="create(form, $event)">
-					저장
-				</md-button>
+			<md-card-actions layout="row" layout-align="end center">
+				<md-button ng-click="goList()">취소</md-button>
+				<md-button class="md-raised md-primary" type="sumbit">수정</md-button>
 			</md-card-actions>
+			
 		</md-card>
 	</form>
 </md-content>
