--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -1,14 +1,10 @@
 <md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale">
 	<md-fab-trigger>
 		<md-button class="md-fab md-accent">
-			<md-icon>add</md-icon>
+			<md-icon>edit</md-icon>
 		</md-button>
 	</md-fab-trigger>
 	<md-fab-actions>
-		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
-			<md-tooltip md-direction="left">기본정보 수정</md-tooltip>
-			<md-icon>edit</md-icon>
-		</md-button>
 		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
 			<md-tooltip md-direction="left">사용자 등록</md-tooltip>
 			<md-icon>person</md-icon>
@@ -24,6 +20,10 @@
 			<md-card-header-text layout="row">
 				<span class="md-title">기본정보</span>
 			</md-card-header-text>
+			<md-button class="md-icon-button" ui-sref="modify({userId: domain.userId})">
+				<md-tooltip>기본 정보 수정</md-tooltip>
+				<md-icon>edit</md-icon>
+			</md-button>
 		</md-card-header>
 		
 		<md-content layout-padding="">
