--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
@@ -46,7 +46,7 @@
 				</md-input-container>
 			</md-card-content>
 			<md-card-actions layout="row" layout-align="end center">
-				<md-button ui-sref="list">취소</md-button>
+				<md-button ng-click="goList()">취소</md-button>
 				<md-button class="md-raised md-primary" type="sumbit">생성</md-button>
 			</md-card-actions>
 			
