--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -19,7 +19,7 @@
 				<span class="md-headline">{{domain.name}}</span>
 				<span class="md-subhead">{{domain.nation}} {{domain.language}}</span>
 			</md-card-title-text>
-			<md-button class="md-icon-button">
+			<md-button class="md-icon-button" ui-sref="modify({userId: domain.userId})">
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
