--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/users.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="/js/configuration/users/viewController.js"></script>
 <script type="text/javascript" src="/js/configuration/users/listController.js"></script>
 <script type="text/javascript" src="/js/configuration/users/createController.js"></script>
+<script type="text/javascript" src="/js/configuration/users/modifyController.js"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
 angular.module('cinnamon')
@@ -30,10 +31,10 @@ angular.module('cinnamon')
 		url: '/configuration/users/:userId',
 		templateUrl: '/configuration/partials/users/view',
 		controller: 'configuration.users.view'
-	}).state('registUserGroup', {
-		url: '/configuration/users/:userId/userGroups/regist',
-		templateUrl: '/configuration/partials/users/userGroups/regist',
-		controller: 'configuration.users.view'
+	}).state('modify', {
+		url: '/configuration/users/:userId/modify',
+		templateUrl: '/configuration/partials/users/modify',
+		controller: 'configuration.users.modify'
 	});
 	
 	//$urlRouterProvider.otherwise('/configuration/users');
