개인 설정 메뉴 그룹 추가 사이트 기본 접속 경로 지정 기능 추가

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -60,7 +60,7 @@ angular.module('cinnamon')
 					.ok('시작하기!'))
 				.finally(function() {
 					//메인 페이지로이동시킴
-					location.href = "/configuration";
+					location.href = "/";
 				});
 				
 				
