url을 읽어서 현재 표시해야하는 메뉴 dimension 알아내도록 수정 개인 설정 메뉴 접근 경로 변경. 메뉴셋팅 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -7,7 +7,7 @@
 	layout:decorator="configuration/layout/base">
 
 <head>
-<title>초기화</title>
+<title>cnnnamon 초기화</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
@@ -88,7 +88,7 @@ angular.module('cinnamon')
 <body layout:fragment="body" class="content" layout="column">
 	<md-toolbar md-whiteframe="5">
 		<div class="md-toolbar-tools">
-			<h3>Web console 시스템 초기화</h3>
+			<h3>Cinnamon 시스템 초기화</h3>
 		</div>
 	</md-toolbar>
 	
