--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -36,7 +36,7 @@
 						<md-button>프로필</md-button>
 					</md-menu-item>
 					<md-menu-item>
-						<md-button ng-href="/configuration/settings" target="_self">개인 설정</md-button>
+						<md-button ng-href="/settings" target="_self">개인 설정</md-button>
 					</md-menu-item>
 					<md-menu-item>
 						<md-button ng-href="/logout" target="_self">로그아웃</md-button>
