--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -1,6 +1,6 @@
 <md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale">
 	<md-fab-trigger>
-		<md-button class="md-fab md-accent">
+		<md-button class="md-fab md-accent" ui-sref="create">
 			<md-tooltip md-direction="left">사용자 모임 생성</md-tooltip>
 			<md-icon>group_add</md-icon>
 		</md-button>
