--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -1,64 +1,68 @@
-<md-content layout="row" layout-padding="" layout-align="center center">
-	<md-icon>search</md-icon>
-	<md-input-container md-no-float="true" flex="" layout-fill="">
-		<input ng-model="searchInfo.keyword" flex="" placeholder="검색어를 입력하세요" ng-keypress="onSearch($event)" />
-	</md-input-container>
-	<md-button class="md-icon-button" ng-click="showDetailSearch = !showDetailSearch">
-		<md-tooltip md-direction="top">상세 검색</md-tooltip>
-		<md-icon>expand_more</md-icon>
-	</md-button>
-	<md-menu>
-		<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
-			<md-tooltip md-direction="top">정렬</md-tooltip>
-			<md-icon>sort</md-icon>
-		</md-button>
-		<md-menu-content>
-			<md-menu-item ng-repeat="item in sortItems">
-				<md-button layout="row">
-					{{item}}
-				</md-button>
-			</md-menu-item>
-			
-			
-			<md-menu-item>
-				<md-button layout="row">
-					이름
-					<md-icon>check</md-icon>
-				</md-button>
-			</md-menu-item>
-			<md-menu-item>
-				<md-button>
-					이메일
-				</md-button>
-			</md-menu-item>
-			<md-menu-item>
-				<md-button>
-					userId
-				</md-button>
-			</md-menu-item>
-		</md-menu-content>
-	</md-menu>
-</md-content>
-
-<div ng-if="showDetailSearch" class="content">
-	<md-divider></md-divider>
-	<ng-transclude ng-transclude-slot="filters" />
-	<md-button class="md-primary md-raised" ng-click="search()">검색</md-button>
-	<md-divider></md-divider>
+<div ng-if="domains.content.length == 0" layout-padding="" ng-clock="">
+	<span class="text-muted">비어 있습니다.</span>
 </div>
-
-<uib-pagination
-	layout-margin=""
-	template-url="/configuration/partials/directive/pagination"
-	total-items="domains.totalElements"
-	items-per-page="domains.size"
-	boundary-links="true"
-	ng-model="searchInfo.page"
-	ng-change="onPageChange()" />
-
-
-<md-list>
-	<md-divider></md-divider>
+<div ng-if="domains.content.length > 0" ng-clock="">
+	<md-content layout="row" layout-padding="" layout-align="center center">
+		<md-icon>search</md-icon>
+		<md-input-container md-no-float="true" flex="" layout-fill="">
+			<input ng-model="searchInfo.keyword" flex="" placeholder="검색어를 입력하세요" ng-keypress="onSearch($event)" />
+		</md-input-container>
+		<md-button class="md-icon-button" ng-click="showDetailSearch = !showDetailSearch">
+			<md-tooltip md-direction="top">상세 검색</md-tooltip>
+			<md-icon>expand_more</md-icon>
+		</md-button>
+		<md-menu>
+			<md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+				<md-tooltip md-direction="top">정렬</md-tooltip>
+				<md-icon>sort</md-icon>
+			</md-button>
+			<md-menu-content>
+				<md-menu-item ng-repeat="item in sortItems">
+					<md-button layout="row">
+						{{item}}
+					</md-button>
+				</md-menu-item>
+				
+				<md-menu-item>
+					<md-button layout="row">
+						이름
+						<md-icon>check</md-icon>
+					</md-button>
+				</md-menu-item>
+				<md-menu-item>
+					<md-button>
+						이메일
+					</md-button>
+				</md-menu-item>
+				<md-menu-item>
+					<md-button>
+						userId
+					</md-button>
+				</md-menu-item>
+			</md-menu-content>
+		</md-menu>
+	</md-content>
 	
-	<ng-transclude ng-transclude-slot="items" />
-</md-list>
+	<div ng-if="showDetailSearch" class="content">
+		<md-divider></md-divider>
+		<ng-transclude ng-transclude-slot="filters" />
+		<md-button class="md-primary md-raised" ng-click="search()">검색</md-button>
+		<md-divider></md-divider>
+	</div>
+	
+	<uib-pagination
+		layout-margin=""
+		template-url="/configuration/partials/directive/pagination"
+		total-items="domains.totalElements"
+		items-per-page="domains.size"
+		boundary-links="true"
+		ng-model="searchInfo.page"
+		ng-change="onPageChange()" />
+	
+	
+	<md-list>
+		<md-divider></md-divider>
+		
+		<ng-transclude ng-transclude-slot="items" />
+	</md-list>
+</div>
