--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/directive/pagination.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/directive/pagination.html
@@ -1,6 +1,6 @@
 <div layout="row" class="cm-pagination">
 	<md-button ng-if="::boundaryLinks" class="md-icon-button page" ng-click="selectPage(1, $event)">
-		<md-icon>skip_previous</md-icon>
+		<md-icon>first_page</md-icon>
 	</md-button>
 	<md-button ng-if="::directionLinks" class="md-icon-button page" ng-click="selectPage(page - 1, $event)">
 		<md-icon>chevron_left</md-icon>
@@ -29,6 +29,6 @@
 		<md-icon>chevron_right</md-icon>
 	</md-button>
 	<md-button ng-if="::boundaryLinks" class="md-icon-button page" ng-click="selectPage(totalPages, $event)">
-		<md-icon>skip_next</md-icon>
+		<md-icon>last_page</md-icon>
 	</md-button>
 </div>
