--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -13,14 +13,18 @@
 </md-fab-speed-dial>
 
 <md-content class="content-container content">
-	<h3 layout-padding="" class="md-headline">사용자 모임</h3>
+	<h3 layout-padding="" class="md-headline">
+		사용자 모임
+		<span class="md-subhead text-muted">정보</span>
+	</h3>
 	
 	<md-card>
 		<md-card-header>
-			<md-card-header-text layout="row">
+			<md-card-header-text>
 				<span class="md-title">기본정보</span>
+				<span class="md-subhead">userGroupId: {{domain.userGroupId}}</span>
 			</md-card-header-text>
-			<md-button class="md-icon-button" ui-sref="modify({userId: domain.userId})">
+			<md-button class="md-icon-button" ui-sref="modify({userGroupId: domain.userGroupId})">
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
@@ -34,7 +38,10 @@
 				</tr>
 				<tr>
 					<th>권한</th>
-					<td class="text-muted">{{domain.authority.name}}</td>
+					<td class="text-muted">
+						{{domain.authority.name}}
+						<md-button class="md-raised md-primary">권한 선택</md-button>
+					</td>
 				</tr>
 				<tr>
 					<th>설명</th>
@@ -42,15 +49,52 @@
 				</tr>
 			</table>
 		</md-content>
-
-	</md-card>
 		
+	</md-card>
+	
 	<md-card>
 		<md-card-header>
-			<md-card-header-text layout="row">
+			<md-card-header-text>
 				<span class="md-title">등록된 사용자</span>
 			</md-card-header-text>
 		</md-card-header>
 		
+		<cm-search-list
+			resource-url="'/rest/configuration/users'"
+			domains="users"
+			default-search-params="{userGroupId: userGroupId}"
+			sort-items="{
+				userId: 'userId',
+				name: '이름'
+			}">
+			
+			<cm-search-list-filters>
+				<md-card-content class="content" layout="column">
+					<md-input-container layout-fill="">
+						<label>이름</label>
+						<input />
+					</md-input-container>
+					<md-input-container layout-fill="">
+						<label>userId</label>
+						<input />
+					</md-input-container>
+					<md-input-container layout-fill="">
+						<label>이메일</label>
+						<input />
+					</md-input-container>
+				</md-card-content>
+			</cm-search-list-filters>
+			<cm-search-list-items>
+			<md-list-item ng-repeat="domain in users.content" ng-click="goUserView(domain)" layout="row">
+				<div flex="5">
+					<md-icon>face</md-icon>
+				</div>
+				<b flex="30">{{domain.name}}</b>
+				<span flex="30" class="text-muted">{{domain.email}}</span>
+				<span class="text-muted">{{domain.tel}}</span>
+				<md-divider ng-if="!$last"></md-divider>
+			</md-list-item>
+			</cm-search-list-items>
+		</cm-search-list>
 	</md-card>
 </md-content>
