--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/modify.html
@@ -4,7 +4,7 @@
 		<span class="md-subhead text-muted">정보 수정</span>
 	</h3>
 	
-	<form name="form" ng-submit="update(form, $event)" novalidate="novalidate">
+	<form name="form" novalidate="novalidate">
 		<md-card>
 			<md-card-header>
 				<md-card-header-text>
@@ -59,9 +59,9 @@
 					</md-select>
 				</md-input-container>
 			</md-card-content>
-			<md-card-actions layout="row" layout-align="end center">
+			<md-card-actions layout="row">
 				<md-button ng-click="goView()">취소</md-button>
-				<md-button class="md-raised md-primary" type="sumbit">수정</md-button>
+				<md-button class="md-raised md-primary" type="sumbit" ng-click="update(form, $event)" ng-disabled="isProcess">수정</md-button>
 			</md-card-actions>
 			
 		</md-card>
