--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/userGroups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/userGroups.html
@@ -13,7 +13,8 @@
 
 <script type="text/javascript" src="/js/configuration/userGroups/viewController.js"></script>
 <script type="text/javascript" src="/js/configuration/userGroups/listController.js"></script>
-<!-- <script type="text/javascript" src="/js/configuration/users/createController.js"></script> -->
+<script type="text/javascript" src="/js/configuration/userGroups/modifyController.js"></script>
+<script type="text/javascript" src="/js/configuration/userGroups/createController.js"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
 angular.module('cinnamon')
@@ -30,6 +31,10 @@ angular.module('cinnamon')
 		url: '/configuration/userGroups/:userGroupId',
 		templateUrl: '/configuration/partials/userGroups/view',
 		controller: 'configuration.userGroups.view'
+	}).state('modify', {
+		url: '/configuration/userGroups/:userGroupId/modify',
+		templateUrl: '/configuration/partials/userGroups/modify',
+		controller: 'configuration.userGroups.modify'
 	});
 	
 	//$urlRouterProvider.otherwise('/configuration/users');
