--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -23,6 +23,18 @@
 			<h2>
 				<a href="/" target="_self">Cinnamon</a>
 			</h2>
+			<!-- <md-button class="md-raised md-accent">스마트랩</md-button> -->
+			<md-menu>
+				<md-button class="md-raised" ng-click="$mdOpenMenu($event)">
+					프로젝트
+				</md-button>
+				<md-menu-content>
+					<md-menu-item>
+						<md-button>스마트랩</md-button>
+					</md-menu-item>
+				</md-menu-content>
+			</md-menu>
+			
 			<span flex=""></span>
 			
 			<md-button class="md-icon-button">
