--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/select.html
@@ -31,7 +31,7 @@
 			</md-dialog-content>
 		</cm-search-list-filters>
 		<cm-search-list-items>
-			<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)">
+			<md-list-item ng-repeat="domain in domains.content" ng-click="onSelect(domain)">
 				
 				<div flex="5">
 					<md-icon>group</md-icon>
