--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
@@ -48,7 +48,7 @@
 					</div>
 				</md-input-container>
 			</md-card-content>
-			<md-card-actions layout="row" layout-align="end center">
+			<md-card-actions layout="row">
 				<md-button ng-click="goList()">취소</md-button>
 				<md-button class="md-raised md-primary" type="sumbit" ng-click="create(form, $event)">생성</md-button>
 			</md-card-actions>
