--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/view.html
@@ -1,11 +1,11 @@
-<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale">
+<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale"  style="position: fixed">
 	<md-fab-trigger>
 		<md-button class="md-fab md-accent">
 			<md-icon>edit</md-icon>
 		</md-button>
 	</md-fab-trigger>
 	<md-fab-actions>
-		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUser($event)">
 			<md-tooltip md-direction="left">사용자 등록</md-tooltip>
 			<md-icon>person</md-icon>
 		</md-button>
@@ -40,7 +40,7 @@
 					<th>권한</th>
 					<td class="text-muted">
 						{{domain.authority.name}}
-						<md-button class="md-raised md-primary">권한 선택</md-button>
+						<md-button class="md-raised md-primary" ng-click="selectAuthority($event)">권한 선택</md-button>
 					</td>
 				</tr>
 				<tr>
