--- a/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
@@ -78,8 +78,7 @@ angular.module('cinnamon')
 						</md-select>
 					</md-input-container>
 				</md-card-content>
-				<md-card-actions layout="row" layout-align="end center">
-					<md-button ng-click="goList()">취소</md-button>
+				<md-card-actions layout="row">
 					<md-button class="md-raised md-primary" type="sumbit">수정</md-button>
 				</md-card-actions>
 				
