사이트, 메뉴모음, 메뉴 기능 상세 화면 개발중 사이드메뉴에 아이콘 설정 리스트 디렉티브 수정: 정렬/페이징을 선택적으로 보여주도록 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -84,7 +84,9 @@
 			<md-list>
 				<md-subheader class="content md-no-sticky">{{currentMenus.name}}</md-subheader>
 				<md-list-item ng-repeat="menu in currentMenus.sidebar" ng-click="selectMenu(menu)">
-					
+					<div flex="15">
+						<md-icon>{{menu.iconClass}}</md-icon>
+					</div>
 					{{menu.name}}
 				</md-list-item>
 				<md-list ng-if="menu.childs != 0">
