--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -81,7 +81,7 @@
 			<md-divider></md-divider>
 			<md-list-item ng-repeat="domain in domains.content" ng-click="goView(domain)" layout="row">
 				<div flex="5">
-					<md-icon>face</md-icon>
+					<md-icon>account_circle</md-icon>
 				</div>
 				<b flex="30">{{domain.name}}</b>
 				<span flex="30" class="text-muted">{{domain.email}}</span>
